# rust_cms

./: .gitignore  Cargo.toml  README.md
screenshots/: placeholder.txt
src/: main.rs  store.rs
src/handlers/: admin.rs  mod.rs  public.rs
src/models/: blog_category.rs  category.rs  mod.rs  post.rs  product.rs
static/css/: admin.css  public.css
